# criteo-uplift-modeling-benchmark

./: .gitignore  LICENSE  README.md  README.tr.md  pyproject.toml  requirements.txt  start.py
.github/workflows/: ci.yml
docs/samples/: sample_uplift_benchmark_report.typ
examples/: generate_synthetic.py  run_demo.py
outputs/: benchmark_results.txt  manifest.json
src/criteo_uplift_benchmark/: __init__.py  assets.py  cli.py  config.py  data.py  downloader.py  evaluation.py  learners.py  metrics.py  pipeline.py  resources.py  schemas.py
src/criteo_uplift_modeling_benchmark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_data_loading.py  test_downloader.py  test_metrics.py
